--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^17.0.1",
     "react-admin": "^3.11.1",
     "react-dom": "^17.0.1",
+    "react-native": "0.63.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.5",
     "shallow-equal-object": "^1.1.1",
@@ -75,20 +76,27 @@
     "@nrwl/cypress": "^11.0.16",
     "@nrwl/eslint-plugin-nx": "^11.0.16",
     "@nrwl/jest": "^11.0.16",
+    "@nrwl/linter": "10.4.4",
     "@nrwl/nest": "^11.0.16",
     "@nrwl/next": "^11.0.16",
     "@nrwl/node": "^11.0.16",
     "@nrwl/react": "^11.0.16",
+    "@nrwl/react-native": "^11.4.1",
     "@nrwl/storybook": "^11.0.16",
     "@nrwl/tao": "^11.0.16",
     "@nrwl/web": "^11.0.16",
     "@nrwl/workspace": "^11.0.16",
     "@nx-tools/nx-docker": "^0.4.1",
+    "@react-native-community/cli": "4.14.0",
+    "@react-native-community/cli-platform-android": "4.13.0",
+    "@react-native-community/cli-platform-ios": "4.13.0",
     "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-knobs": "^6.1.11",
     "@storybook/react": "^6.1.11",
     "@svgr/webpack": "^5.4.0",
+    "@testing-library/jest-native": "3.4.3",
     "@testing-library/react": "^11.1.2",
+    "@testing-library/react-native": "7.1.0",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.8",
@@ -98,6 +106,7 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-native": "0.63.18",
     "@types/sqlite3": "^3.1.6",
     "@types/uuid": "^8.3.0",
     "@types/webpack": "^4.41.21",
@@ -119,7 +128,12 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^4.3.6",
     "jest": "^26.2.2",
+    "jest-react-native": "18.0.0",
+    "metro": "0.59.0",
+    "metro-react-native-babel-preset": "0.63.0",
+    "metro-resolver": "0.59.0",
     "prettier": "^2.1.2",
+    "react-test-renderer": "17.0.1",
     "sqlite3": "^5.0.0",
     "standard-version": "^9.1.0",
     "storybook-addon-next-router": "^2.0.3",
