--- a/.env
+++ b/.env
@@ -1,1 +1,13 @@
-JWT_SECRET=changeme
+NODE_API_URL=http://localhost:4200
+NODE_API_URL_INTERNAL=http://localhost:4200
+NODE_DB_HOST=localhost
+NODE_DB_PORT=3306
+NODE_DB_USER=seekandseat
+NODE_DB_PASSWORD=seekandseat
+NODE_DB_DATABASE=seekandseatdb
+NODE_EVENTSOURCING_URI=mongodb://localhost:27017/es
+NODE_JWT_SECRET=secret
+NODE_MONGODB_URI=mongodb://localhost:27017/seekandseat
+NEXTAUTH_URL=http://localhost:4200
+NEXTAUTH_URL_INTERNAL=http://localhost:4200
+NEXT_PUBLIC_API_URL=http://localhost:4200
