--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/cqrs": "^7.0.1",
     "@nestjs/jwt": "^7.2.0",
+    "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.7.8",
@@ -45,6 +46,7 @@
     "document-register-element": "1.13.1",
     "event-sourcing-nestjs": "^1.1.4",
     "jwt-decode": "^3.1.2",
+    "mongoose": "^5.12.11",
     "mysql": "^2.18.1",
     "next": "^10.0.1",
     "next-auth": "^3.1.0",
