--- a/nx.json
+++ b/nx.json
@@ -1,14 +1,19 @@
 {
-  "npmScope": "seekNseat",
-  "affected": { "defaultBase": "master" },
   "implicitDependencies": {
     "workspace.json": "*",
-    "package.json": { "dependencies": "*", "devDependencies": "*" },
+    "package.json": {
+      "dependencies": "*",
+      "devDependencies": "*"
+    },
     "tsconfig.base.json": "*",
     "tslint.json": "*",
     ".eslintrc.json": "*",
     "nx.json": "*"
   },
+  "affected": {
+    "defaultBase": "master"
+  },
+  "npmScope": "seekNseat",
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
@@ -24,14 +29,34 @@
     }
   },
   "projects": {
-    "web": { "tags": [] },
-    "web-e2e": { "tags": [], "implicitDependencies": ["web"] },
-    "api": { "tags": [] },
-    "domain": { "tags": [] },
-    "ui": { "tags": [] },
-    "contracts": { "tags": [] },
-    "admin": { "tags": [] },
-    "admin-e2e": { "tags": [], "implicitDependencies": ["admin"] },
-    "mobile": { "tags": [] }
+    "web": {
+      "tags": []
+    },
+    "web-e2e": {
+      "tags": [],
+      "implicitDependencies": ["web"]
+    },
+    "api": {
+      "tags": []
+    },
+    "domain": {
+      "tags": []
+    },
+    "ui": {
+      "tags": []
+    },
+    "contracts": {
+      "tags": []
+    },
+    "admin": {
+      "tags": []
+    },
+    "admin-e2e": {
+      "tags": [],
+      "implicitDependencies": ["admin"]
+    },
+    "mobile": {
+      "tags": []
+    }
   }
 }
