--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -12,7 +12,10 @@
     "isolatedModules": true
   },
   "files": [],
-  "include": [],
+  "include": [
+    "**/*.js",
+    "**/*.jsx"
+  ],
   "references": [
     {
       "path": "./tsconfig.app.json"
@@ -21,5 +24,7 @@
       "path": "./tsconfig.spec.json"
     }
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
