--- a/package.json
+++ b/package.json
@@ -48,15 +48,15 @@
     "jwt-decode": "^3.1.2",
     "mongoose": "^5.12.11",
     "mysql": "^2.18.1",
-    "next": "^10.0.1",
+    "next": "10.2.0",
     "next-auth": "^3.1.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "ra-data-json-server": "^3.11.1",
-    "react": "^17.0.1",
+    "react": "17.0.2",
     "react-admin": "^3.11.1",
-    "react-dom": "^17.0.1",
-    "react-native": "0.63.4",
+    "react-dom": "17.0.2",
+    "react-native": "0.64.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.5",
     "shallow-equal-object": "^1.1.1",
@@ -74,75 +74,77 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@nrwl/cli": "^11.0.16",
-    "@nrwl/cypress": "^11.0.16",
-    "@nrwl/eslint-plugin-nx": "^11.0.16",
-    "@nrwl/jest": "^11.0.16",
-    "@nrwl/linter": "10.4.4",
-    "@nrwl/nest": "^11.0.16",
-    "@nrwl/next": "^11.0.16",
-    "@nrwl/node": "^11.0.16",
-    "@nrwl/react": "^11.0.16",
+    "@nrwl/cli": "12.5.6",
+    "@nrwl/cypress": "12.5.6",
+    "@nrwl/eslint-plugin-nx": "12.5.6",
+    "@nrwl/jest": "12.5.6",
+    "@nrwl/linter": "12.5.6",
+    "@nrwl/nest": "12.5.6",
+    "@nrwl/next": "12.5.6",
+    "@nrwl/node": "12.5.6",
+    "@nrwl/react": "12.5.6",
     "@nrwl/react-native": "^12.3.6",
-    "@nrwl/storybook": "^11.0.16",
-    "@nrwl/tao": "^11.0.16",
-    "@nrwl/web": "^11.0.16",
-    "@nrwl/workspace": "^11.0.16",
+    "@nrwl/storybook": "12.5.6",
+    "@nrwl/tao": "12.5.6",
+    "@nrwl/web": "12.5.6",
+    "@nrwl/workspace": "12.5.6",
     "@nx-tools/nx-docker": "^0.4.1",
     "@react-native-community/cli": "4.14.0",
     "@react-native-community/cli-platform-android": "4.13.0",
     "@react-native-community/cli-platform-ios": "4.13.0",
     "@storybook/addon-essentials": "^6.1.11",
-    "@storybook/addon-knobs": "^6.1.11",
-    "@storybook/react": "^6.1.11",
+    "@storybook/addon-knobs": "~6.3.0",
+    "@storybook/react": "~6.3.0",
     "@svgr/webpack": "^5.4.0",
     "@testing-library/jest-native": "3.4.3",
-    "@testing-library/react": "^11.1.2",
+    "@testing-library/react": "11.2.5",
     "@testing-library/react-native": "7.1.0",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.8",
     "@types/jwt-decode": "^3.1.0",
     "@types/next-auth": "^3.1.19",
-    "@types/node": "^14.14.14",
+    "@types/node": "14.14.33",
     "@types/passport-jwt": "^3.0.3",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-native": "0.63.18",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
+    "@types/react-native": "^0.64.10",
     "@types/sqlite3": "^3.1.6",
     "@types/uuid": "^8.3.0",
     "@types/webpack": "^4.41.21",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@typescript-eslint/eslint-plugin": "4.19.0",
+    "@typescript-eslint/parser": "4.19.0",
     "babel-jest": "^26.2.2",
     "babel-loader": "8.1.0",
+    "babel-plugin-polyfill-corejs2": "^0.2.2",
+    "babel-plugin-polyfill-regenerator": "^0.2.2",
     "cucumber-html-reporter": "^5.3.0",
     "cypress": "^6.2.0",
     "cypress-cucumber-preprocessor": "^4.0.0",
-    "dotenv": "^6.2.0",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.0.0",
+    "dotenv": "8.2.0",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^4.3.6",
-    "jest": "^26.2.2",
+    "jest": "27.0.3",
     "jest-react-native": "18.0.0",
-    "metro": "0.59.0",
-    "metro-react-native-babel-preset": "0.63.0",
-    "metro-resolver": "0.59.0",
-    "prettier": "^2.1.2",
+    "metro": "^0.66.1",
+    "metro-react-native-babel-preset": "^0.66.1",
+    "metro-resolver": "^0.66.1",
+    "prettier": "2.3.2",
     "react-test-renderer": "17.0.1",
     "sqlite3": "^5.0.0",
     "standard-version": "^9.1.0",
     "storybook-addon-next-router": "^2.0.3",
-    "ts-jest": "^26.4.0",
+    "ts-jest": "27.0.3",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.0",
-    "typescript": "4.0.*",
+    "typescript": "4.1.4",
     "url-loader": "^3.0.0"
   },
   "husky": {
