--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,9 +16,9 @@
     "strictNullChecks": true,
     "baseUrl": ".",
     "paths": {
+      "@seekNseat/contracts": ["libs/contracts/src/index.ts"],
       "@seekNseat/domain": ["libs/domain/src/index.ts"],
-      "@seekNseat/ui": ["libs/ui/src/index.ts"],
-      "@seekNseat/contracts": ["libs/contracts/src/index.ts"]
+      "@seekNseat/ui": ["libs/ui/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
