react-native libs dependencies

--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.7.8",
     "@nestjs/typeorm": "^7.1.5",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.2",
     "core-js": "^3.6.5",
@@ -57,6 +61,12 @@
     "react-admin": "^3.11.1",
     "react-dom": "17.0.2",
     "react-native": "0.64.2",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.4.0",
+    "react-native-vector-icons": "^8.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.5",
     "shallow-equal-object": "^1.1.1",
