--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -6,6 +6,11 @@
     "react-native": "*",
     "react": "*",
     "@testing-library/react-native": "*",
-    "@testing-library/jest-native": "*"
+    "@testing-library/jest-native": "*",
+    "react-native-gesture-handler": "*",
+    "@react-navigation/native": "*",
+    "@react-navigation/stack": "*",
+    "react-native-elements": "*",
+    "axios": "*"
   }
 }
