config adb tcp port and api ip for mobile

--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ NODE_MONGODB_URI=mongodb://localhost:27017/seekandseat
 NEXTAUTH_URL=http://localhost:4200
 NEXTAUTH_URL_INTERNAL=http://localhost:4200
 NEXT_PUBLIC_API_URL=http://localhost:4200
+RN_REMOTE_URL=http://192.168.1.50:3333
