--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.2",
     "core-js": "^3.6.5",
