--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -14,7 +14,7 @@
     "axios": "^0.21.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-paper": "*",
+    "react-native-paper": "^4.9.2",
     "react-native-screens": "^3.4.0"
   }
 }
