--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,6 +15,8 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-paper": "^4.9.2",
-    "react-native-screens": "^3.4.0"
+    "react-native-screens": "^3.4.0",
+    "uuid": "^8.3.2",
+    "react-native-get-random-values": "^1.7.0"
   }
 }
