--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-admin": "^3.11.1",
     "react-dom": "17.0.2",
     "react-native": "0.64.2",
+    "react-native-element-dropdown": "^1.2.0",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "^1.7.0",
