--- a/nx.json
+++ b/nx.json
@@ -45,6 +45,9 @@
     "contracts-auth": {
       "tags": []
     },
+    "contracts-booking": {
+      "tags": []
+    },
     "contracts-business": {
       "tags": []
     },
@@ -58,6 +61,9 @@
       "tags": []
     },
     "nestjs-auth": {
+      "tags": []
+    },
+    "nestjs-booking": {
       "tags": []
     },
     "nestjs-business": {
