--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "@nestjs/swagger": "^5.0.0",
     "@nestjs/typeorm": "^8.0.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^12.4.0",
+    "@react-native-firebase/auth": "^12.4.0",
+    "@react-native-google-signin/google-signin": "^6.0.1",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
