--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 # dependencies
 /node_modules
 /apps/mobile/node_modules
+/apps/mobile/android/app/google-services.json
 
 # IDEs and editors
 /.idea
