changed package name

--- a/apps/mobile/android/app/build.gradle
+++ b/apps/mobile/android/app/build.gradle
@@ -132,7 +132,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.mobile"
+        applicationId "es.uco.aulasoftwarelibre.seeknseat"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -233,4 +233,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
 apply plugin: 'com.google.gms.google-services'
