vendor: added react-native-bottomtabnavigator

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -21,6 +21,9 @@
     "react-native-element-dropdown": "^1.2.0",
     "@react-native-firebase/app": "^12.4.0",
     "@react-native-firebase/auth": "^12.4.0",
-    "@react-native-google-signin/google-signin": "^6.0.1"
+    "@react-native-google-signin/google-signin": "^6.0.1",
+    "@react-navigation/bottom-tabs": "^6.0.1",
+    "@nestjs/swagger": "^5.0.0",
+    "class-validator": "^0.13.1"
   }
 }
