--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@react-native-firebase/app": "^12.4.0",
     "@react-native-firebase/auth": "^12.4.0",
     "@react-native-google-signin/google-signin": "^6.0.1",
+    "@react-navigation/bottom-tabs": "^6.0.1",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
