--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -24,6 +24,8 @@
     "@react-native-google-signin/google-signin": "^6.0.1",
     "@react-navigation/bottom-tabs": "^6.0.1",
     "@nestjs/swagger": "^5.0.0",
-    "class-validator": "^0.13.1"
+    "class-validator": "^0.13.1",
+    "react-native-pager-view": "^5.4.0",
+    "react-native-tab-view": "^3.1.1"
   }
 }
