--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "jwt-decode": "^3.1.2",
     "mongoose": "^5.12.11",
     "mysql": "^2.18.1",
+    "nest-access-control": "^2.0.2",
     "nestjs-console": "^7.0.0",
     "next": "11.0.1",
     "next-auth": "^3.1.0",
