feat: created new mobile app for users and settedp up react-native with nx  workspace

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,8 @@ node_modules/
 ## Nested node_modules
 
 node_modules/
+## Nested node_modules
+
+node_modules/
+
+apps/user-mobile-e2e/artifacts
