--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "12.6.2",
     "@nrwl/cypress": "12.6.2",
+    "@nrwl/detox": "12.5.0",
     "@nrwl/eslint-plugin-nx": "12.6.2",
     "@nrwl/jest": "12.6.2",
     "@nrwl/linter": "12.6.2",
@@ -123,10 +124,12 @@
     "@storybook/addon-knobs": "~6.3.0",
     "@storybook/react": "~6.3.0",
     "@svgr/webpack": "^5.4.0",
+    "@testing-library/jest-dom": "5.14.1",
     "@testing-library/jest-native": "3.4.3",
     "@testing-library/react": "11.2.5",
     "@testing-library/react-native": "7.1.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/detox": "17.14.0",
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.8",
     "@types/jwt-decode": "^3.1.0",
@@ -148,6 +151,7 @@
     "cucumber-html-reporter": "^5.3.0",
     "cypress": "^6.2.0",
     "cypress-cucumber-preprocessor": "^4.0.0",
+    "detox": "18.18.0",
     "dotenv": "8.2.0",
     "eslint": "7.22.0",
     "eslint-config-next": "11.0.1",
@@ -160,11 +164,13 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^4.3.6",
     "jest": "27.0.3",
+    "jest-circus": "27.0.3",
     "jest-react-native": "18.0.0",
     "metro": "^0.66.1",
     "metro-react-native-babel-preset": "^0.66.1",
     "metro-resolver": "^0.66.1",
     "prettier": "2.3.2",
+    "react-native-codegen": "0.0.7",
     "react-test-renderer": "17.0.1",
     "sqlite3": "^5.0.0",
     "standard-version": "^9.1.0",
