--- a/apps/user-mobile/.babelrc
+++ b/apps/user-mobile/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["module:metro-react-native-babel-preset"]
+  "presets": ["module:metro-react-native-babel-preset", "@nrwl/web/babel"],
+  "plugins": ["transform-inline-environment-variables"]
 }
