--- a/apps/user-mobile/package.json
+++ b/apps/user-mobile/package.json
@@ -6,6 +6,25 @@
     "react-native": "0.64.2",
     "react": "17.0.2",
     "@testing-library/react-native": "7.1.0",
-    "@testing-library/jest-native": "3.4.3"
+    "@testing-library/jest-native": "3.4.3",
+    "react-native-gesture-handler": "^1.10.3",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
+    "react-native-elements": "^3.4.2",
+    "axios": "^0.21.1",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-paper": "^4.9.2",
+    "react-native-screens": "^3.4.0",
+    "uuid": "^8.3.2",
+    "react-native-get-random-values": "^1.7.0",
+    "react-native-element-dropdown": "^1.2.0",
+    "@react-native-firebase/app": "^12.4.0",
+    "@react-native-firebase/auth": "^12.4.0",
+    "@react-native-google-signin/google-signin": "^6.0.1",
+    "@nestjs/swagger": "^5.0.0",
+    "class-validator": "^0.13.1",
+    "react-native-pager-view": "^5.4.0",
+    "react-native-tab-view": "^3.1.1"
   }
 }
