--- a/apps/user-mobile/package.json
+++ b/apps/user-mobile/package.json
@@ -25,6 +25,8 @@
     "@nestjs/swagger": "^5.0.0",
     "class-validator": "^0.13.1",
     "react-native-pager-view": "^5.4.0",
-    "react-native-tab-view": "^3.1.1"
+    "react-native-tab-view": "^3.1.1",
+    "@react-native-community/datetimepicker": "^3.5.2",
+    "react-native-modal-datetime-picker": "^10.2.0"
   }
 }
