--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.0",
     "@nestjs/typeorm": "^8.0.0",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^12.4.0",
     "@react-native-firebase/auth": "^12.4.0",
@@ -77,6 +78,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "^1.7.0",
+    "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-pager-view": "^5.4.0",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.0",
