--- a/apps/user-mobile/package.json
+++ b/apps/user-mobile/package.json
@@ -27,6 +27,7 @@
     "react-native-pager-view": "^5.4.0",
     "react-native-tab-view": "^3.1.1",
     "@react-native-community/datetimepicker": "^3.5.2",
-    "react-native-modal-datetime-picker": "^10.2.0"
+    "react-native-modal-datetime-picker": "^10.2.0",
+    "react-hook-form": "^7.12.2"
   }
 }
