--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react": "17.0.2",
     "react-admin": "^3.11.1",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.12.2",
     "react-native": "0.64.2",
     "react-native-element-dropdown": "^1.2.0",
     "react-native-elements": "^3.4.2",
