feat(backend): sending jwt signed from frontend check if user logged with google exists in database and create new if not

--- a/nx.json
+++ b/nx.json
@@ -51,6 +51,9 @@
     "contracts-business": {
       "tags": []
     },
+    "contracts-google-auth": {
+      "tags": []
+    },
     "contracts-user": {
       "tags": []
     },
@@ -70,6 +73,9 @@
       "tags": []
     },
     "nestjs-common": {
+      "tags": []
+    },
+    "nestjs-google-auth": {
       "tags": []
     },
     "nestjs-user": {
