--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
     "event-sourcing-nestjs": "^1.1.4",
+    "google-auth-library": "^7.6.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^5.12.11",
     "mysql": "^2.18.1",
