--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "ra-data-json-server": "^3.11.1",
+    "ra-data-rest-client": "^1.1.1",
     "react": "17.0.2",
     "react-admin": "^3.11.1",
     "react-dom": "17.0.2",
