--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -25,6 +25,7 @@
     "@nestjs/swagger": "^5.0.0",
     "class-validator": "^0.13.1",
     "react-native-pager-view": "^5.4.0",
-    "react-native-tab-view": "^3.1.1"
+    "react-native-tab-view": "^3.1.1",
+    "react-hook-form": "^7.12.2"
   }
 }
