--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -26,6 +26,7 @@
     "class-validator": "^0.13.1",
     "react-native-pager-view": "^5.4.0",
     "react-native-tab-view": "^3.1.1",
-    "react-hook-form": "^7.12.2"
+    "react-hook-form": "^7.12.2",
+    "react-native-image-picker": "^4.0.6"
   }
 }
