--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "^1.7.0",
+    "react-native-image-picker": "^4.0.6",
     "react-native-modal-datetime-picker": "^10.2.0",
     "react-native-pager-view": "^5.4.0",
     "react-native-paper": "^4.9.2",
