--- a/apps/user-mobile/android/app/src/main/AndroidManifest.xml
+++ b/apps/user-mobile/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="es.uco.aulasoftwarelibre.seeknseat.client">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="es.uco.aulasoftwarelibre.seeknseat.user.mobile">
   <uses-permission android:name="android.permission.INTERNET"/>
   <!-- OPTIONAL PERMISSIONS, REMOVE WHATEVER YOU DO NOT NEED -->
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
